<resources>
    <string name="app_name">     Weather      </string>
    <string name="hint">Example  - Paris </string>
    <string name="date">Date</string>
    <string name="temperature">Temperature</string>
    <string name="city">City</string>
    <string name="humidity">Humidity</string>
    <string name="wind">Wind</string>
    <string name="update">Update</string>
    <string name="eror"> Please enter valid city name or check internet connection!</string>
    <string name="country">Country</string>

</resources>
